--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -4,6 +4,12 @@
  *  Square icons designed to be used alongside Font Awesome square icons - https://fortawesome.github.io/Font-Awesome/
  *  Licenses - Font: SIL OFL 1.1, CSS: MIT License
  */
+ :root {
+  --primary-color: #83da86; /* Green */
+  --secondary-color: #673AB7; /* Dark Purple */
+  --accent-color: #ecd17a; /* Yellow */
+}
+
 @font-face {
     font-family: 'Academicons';
     src:url('../fonts/academicons.eot?v=1.8.0');
@@ -15,6 +21,8 @@
     font-style: normal;
 }
 .ai {
+  color: var(--primary-color);
+  transition: color 0.3s ease;
 	display:inline-block;
 	font:normal normal normal 14px/1 Academicons;
 	font-size:inherit;
