--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -48,6 +48,12 @@ layout: default
         {% elsif page.citation %}
           <p>Recommended citation: {{ page.citation }} </p>
         {% endif %} -->
+
+        {% page.paperurl %}
+          <p>Downloads: [<a href="Preprint"><u>{{ page.paperurl }}</u></a></p>
+        {% elsif page.poster %}
+          <p>Recommended citation: {{ page.citation }} </p>
+        {% endif %}
     
         </header>
       {% endunless %}
