--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -52,11 +52,11 @@ layout: default
       {% if page.paperurl or page.posterurl %}
         <p>Download: [
         {% if page.paperurl %}
-          <a href="{{ page.paperurl }}"><u>Preprint</u></a>
+          <a href="{{ page.paperurl }}">Preprint</a>
           {% if page.posterurl %} | {% endif %}
         {% endif %}
         {% if page.posterurl %}
-          <a href="{{ page.posterurl }}"><u>Poster</u></a>
+          <a href="{{ page.posterurl }}">Poster</a>
         {% endif %}
         {% if page.github %} | {% endif %}
         {% if page.github %}
@@ -72,6 +72,12 @@ layout: default
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
+
+      <!-- {% if page.citation and page.paperurl %}
+          <p>Recommended Reference Format: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
+        {% elsif page.citation %}
+          <p>Recommended citation: {{ page.citation }} </p>
+      {% endif %} -->
 
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
