--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,13 +52,21 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %} -->
     
-    {% if post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }} </p>
-    {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
-    {% endif %}
+    {% if page.paperurl or page.posterurl %}
+        <p>Download: [
+        {% if page.paperurl %}
+          <a href="{{ page.paperurl }}">Preprint</a>
+          {% if page.posterurl %} | {% endif %}
+        {% endif %}
+        {% if page.posterurl %}
+          <a href="{{ page.posterurl }}">Poster</a>
+        {% endif %}
+        {% if page.github %} | {% endif %}
+        {% if page.github %}
+          <a href="{{ page.github }}"><u>Github</u></a>
+        {% endif %}
+        ]</p>
+      {% endif %}
 
   </article>
 </div>
