--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,7 +60,7 @@ layout: default
         {% endif %}
         {% if page.github %} | {% endif %}
         {% if page.github %}
-          <a href="{{ page.github }}"><u>Github</u></a>
+          <a href="{{ page.github }}">Github</a>
         {% endif %}
         ]</p>
       {% endif %}
