--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,21 +42,26 @@
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-      {% if post.paperurl or post.posterurl %}
-      <p>Download: [
-      {% if post.paperurl %}
-        <a href="{{ page.paperurl }}">Preprint</a>
-        {% if post.posterurl %} | {% endif %}
-      {% endif %}
-      {% if page.posterurl %}
-        <a href="{{ post.posterurl }}">Poster</a>
-      {% endif %}
-      {% if post.github %} | {% endif %}
-      {% if post.github %}
-        <a href="{{ post.github }}"><u>Github</u></a>
-      {% endif %}
-      ]</p>
+      <p>
+    {% if post.paperurl %}
+      <a href="{{ post.paperurl }}">
+        <img src="/assets/icons/pdf.png" alt="Preprint" title="Preprint">
+      </a>
+    {% if post.posterurl %} | {% endif %}
     {% endif %}
+    {% if post.posterurl %}
+      <a href="{{ post.posterurl }}">
+        <img src="/assets/icons/poster.png" alt="Poster" title="Poster">
+      </a>
+    {% endif %}
+    {% if post.github %} | {% endif %}
+    {% if post.github %}
+      <a href="{{ post.github }}">
+        <img src="/assets/icons/github.png" alt="Github" title="Github">
+      </a>
+    {% endif %}
+    </p>
+    
     {% elsif post.date %}
       <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
     {% endif %}
