--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,20 +41,19 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-      <p>
+      <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">
         <img src="/assets/icons/pdf.png" alt="Preprint" title="Preprint">
       </a>
-    {% if post.posterurl %} | {% endif %}
+    {% if post.posterurl %}|{% endif %}
     {% endif %}
     {% if post.posterurl %}
       <a href="{{ post.posterurl }}">
         <img src="/assets/icons/poster.png" alt="Poster" title="Poster">
       </a>
     {% endif %}
-    {% if post.github %} | {% endif %}
+    {% if post.github %}|{% endif %}
     {% if post.github %}
       <a href="{{ post.github }}">
         <img src="/assets/icons/github.png" alt="Github" title="Github">
