--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -50,7 +50,7 @@
     {% endif %}
     {% if post.posterurl %}
       <a href="{{ post.posterurl }}">
-        <img src="/assets/icons/poster.png" alt="Poster" title="Poster">
+        <img src="/assets/icons/poster.svg" alt="Poster" title="Poster">
       </a>
     {% endif %}
     {% if post.github %}|{% endif %}
