--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -358,7 +358,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .archive__item-title a {
   color: var(--secondary-color);
+  font-weight: 400; /* Regular font weight */
+
 }
 .masthead__menu-item {
   font-family: 'Montserrat', sans-serif;
+}
+.masthead__menu-item:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--accent-color);
 }
