--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,24 +41,24 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download:
+      <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download: [
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">
-        <img src="/assets/icons/pdf.png" alt="Preprint">
+       Preprint
       </a>
     {% if post.posterurl %}|{% endif %}
     {% endif %}
     {% if post.posterurl %}
       <a href="{{ post.posterurl }}">
-        <img src="/assets/icons/poster.svg" alt="Poster">
+        "Poster"
       </a>
     {% endif %}
     {% if post.github %}|{% endif %}
     {% if post.github %}
       <a href="{{ post.github }}">
-        <img src="/assets/icons/github.png" alt="Github">
+        Github
       </a>
-    {% endif %}
+    {% endif %}]
     </p>
     
     {% elsif post.date %}
