--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -367,7 +367,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .masthead__menu-item:hover {
-  background-color: var(--primary-color);
+  /* background-color: var(--primary-color); */
 
   /* text-decoration: underline;
   text-decoration-color: var(--accent-color); */
