--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -376,3 +376,8 @@ h1, h2, h3, h4, h5, h6 {
 .author__name, .author__bio, .author__urls {
   font-family: 'Montserrat', sans-serif;
 }
+.header-image img {
+  width: 100%;
+  height: 200;
+  margin-bottom: 20px;
+}
