fix poster text

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -50,7 +50,7 @@
     {% endif %}
     {% if post.posterurl %}
       <a href="{{ post.posterurl }}">
-        "Poster"
+        Poster
       </a>
     {% endif %}
     {% if post.github %}|{% endif %}
