--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -1,383 +1,641 @@
-/*
- *  Academicons 1.8.0 by James Walsh - https://github.com/jpswalsh
- *  Fonts generated using the IcoMoon app - http://icomoon.io/app
- *  Square icons designed to be used alongside Font Awesome square icons - https://fortawesome.github.io/Font-Awesome/
- *  Licenses - Font: SIL OFL 1.1, CSS: MIT License
- */
- :root {
-  --primary-color: #80d383; /* Green */
-  --secondary-color: #673AB7; /* Dark Purple */
-  --accent-color: #ecd17a; /* Yellow */
+$white: #ffffff;
+$black: #000000;
+$primary1: #4b208c;
+$primary2: #371e71;
+
+@mixin main-font {
+  font-family: "Poppins", sans-serif;
 }
 
-@font-face {
-    font-family: 'Academicons';
-    src:url('../fonts/academicons.eot?v=1.8.0');
-    src:url('../fonts/academicons.eot?v=1.8.0') format('embedded-opentype'),
-        url('../fonts/academicons.ttf?v=1.8.0') format('truetype'),
-        url('../fonts/academicons.woff?v=1.8.0') format('woff'),
-        url('../fonts/academicons.svg?v=1.8.0#academicons') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-.ai {
-	display:inline-block;
-	font:normal normal normal 14px/1 Academicons;
-	font-size:inherit;
-	text-rendering:auto;
-	-webkit-font-smoothing:antialiased;
-	-moz-osx-font-smoothing:grayscale;
-}
-.ai-academia:before {
-  content: "\e800";
-}
-.ai-academia-square:before {
-  content: "\e801";
-}
-.ai-acclaim:before {
-  content: "\e802";
-}
-.ai-acclaim-square:before {
-  content: "\e803";
-}
-.ai-acm:before {
-  content: "\e804";
-}
-.ai-acm-square:before {
-  content: "\e805";
-}
-.ai-ads:before {
-  content: "\e806";
-}
-.ai-ads-square:before {
-  content: "\e807";
-}
-.ai-arxiv:before {
-  content: "\e808";
-}
-.ai-arxiv-square:before {
-  content: "\e809";
-}
-.ai-biorxiv:before {
-  content: "\e810";
-}
-.ai-biorxiv-square:before {
-  content: "\e811";
-}
-.ai-ceur:before {
-  content: "\e812";
-}
-.ai-ceur-box:before {
-  content: "\e813";
-}
-.ai-courser:before {
-  content: "\e814";
-}
-.ai-courser-square:before {
-  content: "\e815";
-}
-.ai-dataverse:before {
-  content: "\e816";
-}
-.ai-dataverse-box:before {
-  content: "\e817";
-}
-.ai-dblp:before {
-  content: "\e818";
-}
-.ai-dblp-square:before {
-  content: "\e819";
-}
-.ai-depsy:before {
-  content: "\e820";
-}
-.ai-depsy-square:before {
-  content: "\e821";
-}
-.ai-doi:before {
-  content: "\e822";
-}
-.ai-doi-square:before {
-  content: "\e823";
-}
-.ai-dryad:before {
-  content: "\e824";
-}
-.ai-dryad-square:before {
-  content: "\e825";
-}
-.ai-figshare:before {
-  content: "\e826";
-}
-.ai-figshare-square:before {
-  content: "\e827";
-}
-.ai-google-scholar:before {
-  content: "\e828";
-}
-.ai-google-scholar-square:before {
-  content: "\e829";
-}
-.ai-ieee:before {
-  content: "\e830";
-}
-.ai-ieee-square:before {
-  content: "\e831";
-}
-.ai-impactstory:before {
-  content: "\e832";
-}
-.ai-impactstory-square:before {
-  content: "\e833";
-}
-.ai-inspire:before {
-  content: "\e834";
-}
-.ai-inspire-square:before {
-  content: "\e835";
-}
-.ai-mendeley:before {
-  content: "\e836";
-}
-.ai-mendeley-square:before {
-  content: "\e837";
-}
-.ai-open-access:before {
-  content: "\e838";
-}
-.ai-open-access-square:before {
-  content: "\e839";
-}
-.ai-orcid:before {
-  content: "\e840";
-}
-.ai-orcid-square:before {
-  content: "\e841";
-}
-.ai-osf:before {
-  content: "\e842";
-}
-.ai-osf-square:before {
-  content: "\e843";
-}
-.ai-overleaf:before {
-  content: "\e844";
-}
-.ai-overleaf-square:before {
-  content: "\e845";
-}
-.ai-philpapers:before {
-  content: "\e846";
-}
-.ai-philpapers-square:before {
-  content: "\e847";
-}
-.ai-piazza:before {
-  content: "\e848";
-}
-.ai-piazza-square:before {
-  content: "\e849";
-}
-.ai-publons:before {
-  content: "\e850";
-}
-.ai-publons-square:before {
-  content: "\e851";
-}
-.ai-pubmed:before {
-  content: "\e852";
-}
-.ai-pubmed-square:before {
-  content: "\e853";
-}
-.ai-researchgate:before {
-  content: "\e854";
-}
-.ai-researchgate-square:before {
-  content: "\e855";
-}
-.ai-scirate:before {
-  content: "\e856";
-}
-.ai-scirate-square:before {
-  content: "\e857";
-}
-.ai-springer:before {
-  content: "\e858";
-}
-.ai-springer-square:before {
-  content: "\e859";
-}
-.ai-zotero:before {
-  content: "\e860";
-}
-.ai-zotero-square:before {
-  content: "\e861";
-}
-/*  Duplication of the FontAwesome style classes using 'ai' in place of 'fa'. */
-.ai-lg {
-  font-size: 1.33333333em;
-  line-height: 0.75em;
-  vertical-align: -15%;
-}
-.ai-2x {
-  font-size: 2em;
-}
-.ai-3x {
-  font-size: 3em;
-}
-.ai-4x {
-  font-size: 4em;
-}
-.ai-5x {
-  font-size: 5em;
-}
-.ai-fw {
-  width: 1.28571429em;
-  text-align: center;
-}
-.ai-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none;
-}
-.ai-ul > li {
-  position: relative;
-}
-.ai-li {
-  position: absolute;
-  left: -2.14285714em;
-  width: 2.14285714em;
-  top: 0.14285714em;
-  text-align: center;
-}
-.ai-li.fa-lg {
-  left: -1.85714286em;
-}
-.ai-border {
-  padding: .2em .25em .15em;
-  border: solid 0.08em #eeeeee;
-  border-radius: .1em;
-}
-.ai-pull-left {
-  float: left;
-}
-.ai-pull-right {
-  float: right;
-}
-.ai.fa-pull-left {
-  margin-right: .3em;
-}
-.ai.fa-pull-right {
-  margin-left: .3em;
-}
-/*  
- *  Repeat of the FontAwesome style classes to prevent override if academicons.css
- *  is called after font-awesome.css.
- */
-.fa-lg {
-  font-size: 1.33333333em;
-  line-height: 0.75em;
-  vertical-align: -15%;
-}
-.fa-2x {
-  font-size: 2em;
-}
-.fa-3x {
-  font-size: 3em;
-}
-.fa-4x {
-  font-size: 4em;
-}
-.fa-5x {
-  font-size: 5em;
-}
-.fa-fw {
-  width: 1.28571429em;
-  text-align: center;
-}
-.fa-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none;
-}
-.fa-ul > li {
-  position: relative;
-}
-.fa-li {
-  position: absolute;
-  left: -2.14285714em;
-  width: 2.14285714em;
-  top: 0.14285714em;
-  text-align: center;
-}
-.fa-li.fa-lg {
-  left: -1.85714286em;
-}
-.fa-border {
-  padding: .2em .25em .15em;
-  border: solid 0.08em #eeeeee;
-  border-radius: .1em;
-}
-.fa-pull-left {
-  float: left;
-}
-.fa-pull-right {
-  float: right;
-}
-.fa.fa-pull-left {
-  margin-right: .3em;
-}
-.fa.fa-pull-right {
-  margin-left: .3em;
-}
-a img {
-  height: 25px; /* Adjust this value to your desired icon size */
-  width: auto;
-  margin-right: 5px; /* Space between icon and text or another icon */
-  vertical-align: middle; /* Aligns the icon with the surrounding text */
-}
-a:hover img {
-  border: none;
-  outline: none;
-  box-shadow: none;
+@mixin hero_btn($col1, $col2, $pad1, $pad2, $bRadius) {
+  display: inline-block;
+  padding: $pad1 $pad2;
+  background-color: $col1;
+  color: $col2;
+  border-radius: $bRadius;
+
+  &:hover {
+    background-color: lighten($color: $col1, $amount: 5);
+  }
 }
 
-.separator {
-  margin: 0 0px;  /* Adjust spacing as needed */
-  color: #aaa;    /* Adjust color as needed */
+@mixin upperBold {
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  @include main-font;
+  color: #0c0c0c;
+  background-color: #ffffff;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Barlow', sans-serif;
+.layout_padding {
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
-.archive__item-title a {
-  /* color: var(--secondary-color); */
-  font-weight: 400; /* Regular font weight */
+.layout_padding2 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+
+.layout_padding2-top {
+  padding-top: 45px;
+}
+
+.layout_padding2-bottom {
+  padding-bottom: 45px;
+}
+
+.layout_padding-top {
+  padding-top: 90px;
+}
+
+.layout_padding-bottom {
+  padding-bottom: 90px;
+}
+
+.heading_container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+
+  h2 {
+    position: relative;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+
+  img {
+    width: 30px;
+  }
+}
+
+/*header section*/
+.hero_area {
+  height: 98vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #eae6f5;
+}
+
+.sub_page {
+  .hero_area {
+    height: auto;
+  }
+
 
 }
 
-.masthead__menu-item {
-  font-family: 'Montserrat', sans-serif;
+.header_section {
+  .container {
+    padding: 0;
+  }
+
+  .nav_container {
+    margin: 0 auto;
+  }
 }
 
-.masthead__menu-item:hover {
-  /* background-color: var(--primary-color); */
+.custom_nav-container {
+  .navbar-nav {
+    .nav-item {
+      .nav-link {
+        padding: 7px 20px;
+        margin: 10px 15px;
+        color: $black;
+        text-align: center;
+        border-radius: 35px;
+        text-transform: uppercase;
+        font-size: 15px;
+      }
 
-  /* text-decoration: underline;
-  text-decoration-color: var(--accent-color); */
+      &.active,
+      &:hover {
+        .nav-link {
+          background-color: $primary1;
+          color: $white;
+        }
+      }
+    }
+  }
 }
 
-.author__name, .author__bio, .author__urls {
-  font-family: 'Montserrat', sans-serif;
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
 }
-.header-image img {
-  width: 100%;
-  height: 50;
-  margin-bottom: 20px;
+
+a:hover,
+a:focus {
+  color: initial;
 }
+
+.btn,
+.btn:focus {
+  outline: none !important;
+  box-shadow: none;
+}
+
+.custom_nav-container .nav_search-btn {
+  background-image: url(../images/search-icon.png);
+  background-size: 22px;
+  background-repeat: no-repeat;
+  background-position-y: 7px;
+  width: 35px;
+  height: 35px;
+  padding: 0;
+  border: none;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+
+  img {
+    margin-right: 5px;
+    width: 35px;
+  }
+
+  span {
+    font-size: 22px;
+    font-weight: 700;
+    color: $primary1;
+  }
+}
+
+.custom_nav-container {
+  z-index: 99999;
+}
+
+.navbar-expand-lg .navbar-collapse {
+  align-items: flex-end; //for this site only
+}
+
+.custom_nav-container .navbar-toggler {
+  outline: none;
+}
+
+.custom_nav-container .navbar-toggler {
+  padding: 0;
+  width: 37px;
+  height: 42px;
+
+  span {
+    display: block;
+    width: 35px;
+    height: 4px;
+    background-color: #190734;
+    margin: 7px 0;
+    transition: all .3s;
+  }
+
+
+  &[aria-expanded="true"] {
+    .s-1 {
+      transform: rotate(45deg);
+      margin: 0;
+      margin-bottom: -4px;
+    }
+
+    .s-2 {
+      display: none;
+    }
+
+    .s-3 {
+      transform: rotate(-45deg);
+      margin: 0;
+      margin-top: -4px;
+    }
+  }
+
+  &[aria-expanded="false"] {
+
+    .s-1,
+    .s-2,
+    .s-3 {
+      transform: none;
+    }
+  }
+
+}
+
+
+
+/*end header section*/
+
+/* slider section */
+.slider_section {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+  color: #3b3a3a;
+  padding-bottom: 90px;
+
+  .row {
+    align-items: center;
+  }
+
+
+
+  .detail_box {
+    color: $black;
+
+    h1 {
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+
+    p {
+      margin-top: 20px;
+    }
+
+    a {
+      @include hero_btn($primary1, $white, 10px, 40px, 35px);
+      margin-top: 35px;
+    }
+  }
+
+  .img_container {
+    border: 7px solid #7b57b2;
+    border-radius: 100%;
+    overflow: hidden;
+
+    div#carouselExampleContarols {
+      width: 100%;
+      position: unset;
+
+
+    }
+
+    .img-box {
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    top: initial;
+    left: initial;
+    bottom: 5%;
+    right: 10%;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 100%;
+    opacity: 1;
+    background-repeat: no-repeat;
+    background-size: 8px;
+    background-position: center;
+
+  }
+
+  .carousel-control-prev {
+    background-image: url(../images/prev.png);
+    background-color: $white;
+    transform: translate(-85px, 30px);
+  }
+
+  .carousel-control-next {
+    background-image: url(../images/next.png);
+    background-color: $primary1;
+    transform: translate(-45px, 0);
+  }
+}
+
+// end slider section
+
+// service section
+
+.service_section {
+  text-align: center;
+
+  .heading_container {
+    justify-content: center;
+  }
+
+  .service_container {
+    display: flex;
+    justify-content: center;
+    padding: 35px 0;
+    flex-wrap: wrap;
+
+    .box {
+      margin: 25px 1%;
+      flex-basis: 31%;
+      padding: 35px 25px 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px 0 rgba($color: #000000, $alpha: .15);
+      border-top: 15px solid transparent;
+      overflow: hidden;
+      transition: all .1s;
+
+      .img-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 125px;
+
+        img {
+          width: 90px;
+        }
+
+
+      }
+
+      .detail-box {
+        margin-top: 25px;
+
+        h5 {
+          color: #2e0e5f;
+          font-weight: 600;
+          position: relative;
+        }
+      }
+
+      &:hover,
+      &.active {
+        border-top: 15px solid #512a97;
+      }
+
+    }
+  }
+
+  .btn-box {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+
+    a {
+      @include hero_btn($primary1, $white, 10px, 35px, 35px);
+    }
+  }
+}
+
+// end service section
+
+
+
+// about section
+.about_section {
+  background-color: #f3f0f6;
+
+  .row {
+    align-items: center;
+  }
+
+  .img_container {
+    display: flex;
+    flex-direction: column;
+
+    .img-box {
+      border: 5px solid #7b57b2;
+      border-radius: 100%;
+      overflow: hidden;
+
+      &.b1 {
+        width: 70%;
+      }
+
+      &.b2 {
+        width: 50%;
+        margin-left: auto;
+        margin-top: -12%;
+      }
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .detail-box {
+    margin-right: 15%;
+
+
+    p {
+      margin-top: 25px;
+    }
+
+    a {
+      @include hero_btn($primary1, $white, 10px, 35px, 5px);
+      margin: 25px 0 45px 0;
+    }
+  }
+}
+
+// end about section
+
+
+
+// blog section
+.blog_section {
+
+  .heading_container {
+    justify-content: center;
+
+    h2 {
+      &::before {
+        background-color: $white;
+      }
+    }
+  }
+
+  .box {
+    margin-top: 55px;
+    background-color: $white;
+    box-shadow: 0 0 10px 0 rgba($color: #000000, $alpha: .15);
+
+    .img-box {
+      position: relative;
+
+      img {
+        width: 100%;
+      }
+
+    }
+
+    .detail-box {
+      padding: 25px 25px 15px;
+
+      h5 {
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+// end blog section
+
+// contact section
+.contact_section {
+  position: relative;
+
+
+  form {
+    margin-top: 45px;
+    padding-right: 35px;
+  }
+
+  input {
+    width: 100%;
+    border: none;
+    height: 50px;
+    margin-bottom: 25px;
+    padding-left: 25px;
+    background-color: transparent;
+    outline: none;
+    color: #101010;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
+
+    &::placeholder {
+      color: #737272;
+    }
+
+    &.message-box {
+      height: 120px;
+    }
+  }
+
+  button {
+    border: none;
+    @include hero_btn($primary1, $white, 12px, 45px, 0px);
+    margin-top: 35px;
+  }
+
+  .map_container {
+    height: 100%;
+    min-height: 325px;
+
+    .map-responsive {
+      height: 100%;
+    }
+  }
+}
+
+// end contact section
+
+
+
+.footer_bg {
+  background-image: url(../images/footer-bg.png);
+  background-size: cover;
+  background-position: top;
+}
+
+/* info section */
+.info_section {
+  background-color: #190734;
+  color: $white;
+
+  h6 {
+    font-weight: bold;
+  }
+
+
+  .info_contact {
+    margin-top: 60px;
+    margin-bottom: 45px;
+
+    .col-md-4 {
+      display: flex;
+      justify-content: center;
+    }
+
+    a {
+      color: $white;
+    }
+
+    img {
+      max-width: 100%;
+      margin-right: 10px;
+    }
+  }
+
+  .info_form {
+    margin: 0 auto;
+    margin-bottom: 45px;
+
+    h4 {
+      text-transform: uppercase;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    form {
+      display: flex;
+      align-items: center;
+
+      input {
+        background-color: $white;
+        border: none;
+        flex: 2.5;
+        outline: none;
+        color: $black;
+        min-height: 42.4px;
+        padding-left: 15px;
+
+        ::placeholder {
+          color: $white;
+          opacity: 0.2;
+        }
+      }
+
+      button {
+        flex: 1;
+        border: none;
+        @include hero_btn($primary1, $white, 10px, 30px, 0);
+        font-size: 15px;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+  .box {
+    display: flex;
+  }
+
+  .info_social {
+    display: flex;
+
+    img {
+      width: 35px;
+      margin-right: 8px;
+    }
+  }
+}
+
+/* end info section */
+
+/* footer section*/
+
+.footer_section {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.footer_section p {
+  color: #222222;
+  margin: 0 auto;
+  text-align: center;
+  padding: 20px;
+
+  a {
+    color: #222222;
+  }
+}
+
+
