--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -50,7 +50,7 @@ layout: default
         {% endif %} -->
 
       {% if page.paperurl or page.posterurl %}
-        <p>Download: [
+        <p>huh,Download: [
         {% if page.paperurl %}
           <a href="{{ page.paperurl }}">Preprint</a>
           {% if page.posterurl %} | {% endif %}
