--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@ layout: compress
 
   <body>
     {% if page.header_image %}
-    <div class="header-image">
+    <!-- <div class="header-image">
         <img src="{{ page.header_image }}" alt="{{ page.title }} header image">
-    </div>
+    </div> -->
     {% endif %}
     
     {% include browser-upgrade.html %}
