--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,11 @@ layout: compress
   </head>
 
   <body>
+        <!-- Green Header instead of Image -->
+        <div style="background-color: green; color: white; text-align: center; padding: 20px;">
+          <h1>Your Green Header Title</h1>
+      </div>
+  
     {% if page.header_image %}
     <!-- <div class="header-image">
         <img src="{{ page.header_image }}" alt="{{ page.title }} header image">
