--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@ layout: compress
 
   <body>
         <!-- Green Header instead of Image -->
-        <div style="background-color: green; color: white; text-align: center; padding: 20px;">
-          <h1>Your Green Header Title</h1>
+        <div style="background-color: 8e7dbe; color: white; text-align: center; padding: 20px;">
+          <!-- <h1>Your Green Header Title</h1> -->
       </div>
   
     {% if page.header_image %}
