--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
 
   <body>
         <!-- Green Header instead of Image -->
-        <div style="background-color: #8e7dbe; height: 50px;"></div>
+        <div style="background-color: #6e4ad0; height: 50px;"></div>
         <!-- <h1>Your Green Header Title</h1> -->
       </div>
   
