update link color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
 
   <body>
         <!-- Green Header instead of Image -->
-        <div style="background-color: #6e4ad0; height: 200px;"></div>
+        <div style="background-color: #6048a0; height: 200px;"></div>
         <!-- <h1>Your Green Header Title</h1> -->
       </div>
   
@@ -25,6 +25,7 @@ layout: compress
     </div> -->
     {% endif %}
     
+
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
