--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,6 +61,7 @@ $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
+$accent-color               : #7cd27c;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
