--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -185,8 +185,7 @@
     text-decoration: none;
 
     &:hover {
-      background-color: $accent-color;
-      color: #fff;
+      color: $accent-color;
     }
   }
 
