--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: compress
         <!-- Green Header instead of Image -->
         <div style="background-color: #6048a0; height: 200px;"></div>
         <!-- <h1>Your Green Header Title</h1> -->
-      </div>
+      <!-- </div> -->
   
     {% if page.header_image %}
     <!-- <div class="header-image">
