update award style

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -68,7 +68,7 @@ layout: default
         {% endif %}
       </p>
       {% if page.award %}
-          <span>{{page.award}}</span>
+          <span style="font-style: italic;">Received the {{page.award}}</span>
       {% endif %}
 
       {% endif %}
