--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,7 +41,10 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download: [
+      <p> {% if page.award %}
+        <span title="{{page.award}}">🏆 </span>
+      {% endif %}
+      Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download: [
     {% if post.paperurl %}
       <a href="{{ post.paperurl }}">
        Preprint
