--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,7 +42,7 @@
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       <p> {% if page.award %}
-        <span title="{{page.award}}">🏆 </span>
+        <span>🏆 </span>
       {% endif %}
       Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download: [
     {% if post.paperurl %}
