--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,7 +41,7 @@
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
-      <p> {% if page.award %}
+      <p> {% if post.award %}
         <span>🏆 </span>
       {% endif %}
       Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}. Download: [
