--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,6 +39,10 @@
     {% endif %}
 
     {% if post.collection == 'teaching' %}
+      <p>I have the privilege of teaching wonderful students while working at Taibah university.
+        I have designed courses and developed teaching materials to support students throughout their learning.
+        Below I am happily sharing some of my materials for possible use/adaptation in classrooms or perhaps as
+         supplementary fun/useful materials for students to use on their own.</p>
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       <p> {% if post.award %}
