--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -73,9 +73,9 @@ $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #171516;
+$github-color               : #4e44dc;
 $google-plus-color          : #dd4b39;
-$instagram-color            : #517fa4;
+$instagram-color            : #d73d85;
 $lastfm-color               : #d51007;
 $linkedin-color             : #007bb6;
 $pinterest-color            : #cb2027;
