--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -327,7 +327,7 @@
 
     &:hover {
       text-decoration: underline;
-      background-color: aquamarine;
+      background-color: rgb(70, 226, 174);
     }
   }
 
