--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,14 @@ layout: compress
 
   <body>
         <!-- Green Header instead of Image -->
-        <div style="background-color: #c1adf9; height: 200px;"></div>
+        <div style="background-color: #4c18db; height: 200px;"></div>
         <!-- <h1>Your Green Header Title</h1> -->
       <!-- </div> -->
   
     {% if page.header_image %}
-    <!-- <div class="header-image">
+    <div class="header-image">
         <img src="{{ page.header_image }}" alt="{{ page.title }} header image">
-    </div> -->
+    </div>
     {% endif %}
     
 
