--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -73,7 +73,7 @@ $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #4e44dc;
+$github-color               : #151517;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #d73d85;
 $lastfm-color               : #d51007;
@@ -94,8 +94,7 @@ $xing-color                 : #006567;
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : #38e3b3;
-// $masthead-link-color        : $primary-color;
+$masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
 
 
