--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -265,10 +265,10 @@
       padding: 10px 20px;
       font-size: $type-size-5;
 
-      &:hover {
-        color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
-      }
+      // &:hover {
+      //   color: $masthead-link-color-hover;
+      //   background: mix(#fff, $primary-color, 75%);
+      // }
     }
 
     &:before {
