--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -14,6 +14,8 @@ layout: default
   {% endunless %}
 {% endif %}
 
+
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
@@ -41,9 +43,8 @@ layout: default
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
-        {% if page.image %}
-        <img src="{{ page.image }}" alt="{{ page.title }}" class="publication-thumbnail">
-      {% endif %}
+       
+
              
         <!-- {% if page.citation and page.paperurl %}
           <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
@@ -71,6 +72,10 @@ layout: default
         {% if page.award %}
           <span title="{{page.award}}">🏆</span>
         {% endif %}
+        {% if page.image and page.layout == "archive" %}
+  <img src="{{ page.image }}" alt="{{ page.title }}" class="thumbnail">
+{% endif %}
+
       </p>
       {% if page.award %}
           <span style="font-style: italic;">Received the {{page.award}}</span>
